convert java 25 stable values to executable example